--- a/EBookFE/package.json
+++ b/EBookFE/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "jwt-decode": "^2.2.0",
     "ng2-toastr": "^4.1.2",
     "ngx-bootstrap": "^3.0.0",
     "rxjs": "^6.2.1",
