--- a/Back/demo/demo/src/main/resources/application.properties
+++ b/Back/demo/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/db_upp
+spring.datasource.url=jdbc:mysql://localhost:3306/db_new
 spring.datasource.username=root
 spring.datasource.password=root
 
